# zappy

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  pilot.py  zappy_ai  zappy_gui2
.github/workflows/: compilation.yml
AI/: ai.py  netctl.py  player.py  utile.py
GUI/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
GUI/Data/: Data.cpp  Data.hpp  Egg.cpp  Egg.hpp  Player.cpp  Player.hpp  Team.cpp  Team.hpp  Tile.cpp  Tile.hpp  enum.hpp
GUI/Gui/: EggGui.cpp  EggGui.hpp  Gui.cpp  Gui.hpp  InfoPlayer.cpp  InfoPlayer.hpp  InfoTeam.cpp  InfoTeam.hpp  InfoTile.cpp  InfoTile.hpp  Menu.cpp  Menu.hpp  Perlin.cpp  Perlin.hpp  PlayerGui.cpp  PlayerGui.hpp  Sound.cpp  Sound.hpp  TileGui.cpp  TileGui.hpp
GUI/Logger/: Logger.cpp  Logger.hpp
GUI/Net/: Commands.cpp  Network.cpp  Network.hpp
Server/: CMakeLists.txt  Makefile  cmake_install.cmake
Server/inc/: actions.h  game.h  netctl.h  options.h  server.h  typedef.h  zserv.h
Server/libs/: CMakeLists.txt  Makefile  cmake_install.cmake
Server/libs/list/: CMakeLists.txt  Makefile  cmake_install.cmake  list.h
Server/libs/list/src/: list_add_elem_at_back.c  list_add_elem_at_front.c  list_add_elem_at_position.c  list_clear.c  list_del_elem_at_back.c  list_del_elem_at_front.c  list_del_elem_at_position.c  list_dump.c  list_get_elem_at_back.c  list_get_elem_at_front.c  list_get_elem_at_position.c  list_get_size.c  list_is_empty.c  list_sort.c
Server/src/: actions.c  main.c  netctl.c  options.c  server.c  timeout.c
Server/src/game/: ai_commandes.c  game.c  gui_communication.c  map_handling.c
